# Gecko

./: .gitignore  CMakeLists.txt  Makefile  PERFORMANCE_ROADMAP.md  README.md  TODO.md  example_gin_style.cpp  optimize_system.sh  run_all_tests.sh  test_cpu_intensive.cpp  test_server.cpp
.cache/clangd/index/: context.cpp.1761E30BBE133612.idx  context.cpp.2803F13E0ABE463E.idx  context.hpp.85345172D27F9793.idx  context.hpp.F5CB4F67F20BD268.idx  engine.cpp.6E476824685C152E.idx  engine.cpp.9D4D4ACB3FF993C6.idx  engine.hpp.01AC9ABA4714844E.idx  engine.hpp.82C05BA9CF7004FD.idx  example_gin_style.cpp.86C216BDE9AD00FF.idx  example_modular_servers.cpp.28FE95313FAC20BC.idx  fast_http_parser.cpp.732CF2B83A3F0050.idx  fast_http_parser.cpp.A20ACBB1F7089066.idx  fast_http_parser.hpp.978B272DFD36D1DD.idx  fast_http_parser.hpp.E4345D1739BCA51D.idx  gin_style.cpp.4669C26B96CE9AC1.idx  http_request.cpp.4FE4B3ACA818DC62.idx  http_request.cpp.9EF93089FA01FE8C.idx  http_request.hpp.0EA7C48F9A143DD6.idx  http_request.hpp.8A4086E0C41874FD.idx  http_response.cpp.10E98873F12EAF37.idx  http_response.cpp.D319734C062C0568.idx  http_response.hpp.96B402A78A29863C.idx  http_response.hpp.E3693791FEEEBF99.idx  http_rpc_middleware.cpp.2B7C0D81CC3AE88B.idx  io_thread_pool.cpp.0574BEF84F2346B2.idx  io_thread_pool.cpp.B22EA97A00D18FE9.idx  io_thread_pool.hpp.13F2109CBFE64116.idx  io_thread_pool.hpp.A67B43103BFF95DE.idx  logger.cpp.9E59C2C5A7F6DE18.idx  logger.cpp.C39709EBCFFBAE09.idx  logger.hpp.3E4249E8FB3C6597.idx  logger.hpp.CD54815B930BFA6E.idx  middlewares.hpp.5B66210E08CE102A.idx  middlewares.hpp.60E13BD62DB3E274.idx  performance_test.cpp.C3B2326F4D890A33.idx  router.cpp.3B6B01F52498587F.idx  router.cpp.6D84C8076C277BCE.idx  router.hpp.E5882EFEADC762FE.idx  router.hpp.E8B9CCFA41C67EB9.idx  rpc_server.cpp.A1B4C60FFB81BF62.idx  (+19 more)
benchmark/: k6-load-test.js
cmake/: GeckoConfig.cmake.in
examples/: gin_style.cpp  http_rpc_middleware.cpp
examples/proto/: greeter.proto
src/: context.cpp  context.hpp  engine.cpp  engine.hpp  fast_http_parser.cpp  fast_http_parser.hpp  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  io_thread_pool.cpp  io_thread_pool.hpp  io_uring_server.hpp  logger.cpp  logger.hpp  middlewares.hpp  performance_test.cpp  request_pool.hpp  router.cpp  router.hpp  server.cpp  server.hpp  server_config.hpp  test_basic_requests.cpp  test_constructors.cpp  test_error_cases.cpp  test_router.cpp  test_special_cases.cpp  thread_pool.cpp  thread_pool.hpp
src/http/: context.hpp  fast_http_parser.cpp  fast_http_parser.hpp  http_request.cpp  http_response.cpp  http_response.hpp  io_thread_pool.cpp  io_thread_pool.hpp  middlewares.hpp  router.hpp  server.hpp  server_config.hpp  thread_pool.hpp
src/logger/: logger.hpp
src/rpc/: middlewares.hpp  rpc_server.cpp  rpc_server.hpp
src/tracing/: tracer.cpp  tracer.hpp
tests/http/: test_basic_requests.cpp  test_constructors.cpp  test_error_cases.cpp  test_special_cases.cpp
tests/performance/: performance_test.cpp  test_thread_pool_cooperative.cpp
tests/router/: test_router.cpp
